--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="keywords" content="HTML,CSS,JavaScript,MC2UH,FAVS,FAVORITES">
   <meta name="author" content="MC2UH">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/styles.css?v=1.0">
+  <link rel="stylesheet" type="text/css" href="styles.css?v=1.0">
   <title>Favs</title>
 </head>
 <!--This is a comment. Comments are not displayed in the browser-->
