--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en"> <!--and hungarian localization is coming soon-->
 <head>
   <meta charset="utf-8">
   <meta name="description" content="MC's fav stuffs">
@@ -16,9 +16,9 @@
   <p>So let the fun begin!</p>
   <header>
     <nav>
-      <a href="index.html">Home</a>
-      <a href="index.html">Site1</a>
-      <a href="index.html">Site2</a>
+      <a href="index.html">Home</a> <!--This is a warm welcome site-->
+      <a href="index.html">Site1</a> <!--Maybe the websites where i have an account-->
+      <a href="index.html">Site2</a> <!--List of my personal favorite books, movies, series, games cover pictures-->
       <a href="index.html">Site4</a>
     </nav>
   </header>
