--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en"> <!--and hungarian localization is coming soon-->
+<html lang="en"> <!--And hungarian localization is coming soon-->
 <head>
   <meta charset="utf-8">
   <meta name="description" content="MC's fav stuffs">
@@ -14,15 +14,13 @@
   <script src="js/scripts.js"></script>
   <h1>Hello World</h1>
   <p>So let the fun begin!</p>
-  <header>
-    <nav>
+  <header>...</header>
+  <nav>
       <a href="index.html">Home</a> <!--This is a warm welcome site-->
       <a href="index.html">Site1</a> <!--Maybe the websites where i have an account-->
       <a href="index.html">Site2</a> <!--List of my personal favorite books, movies, series, games cover pictures-->
       <a href="index.html">Site4</a>
     </nav>
-  </header>
-  <nav>...</nav>
   <article>...</article>
   <section>...</section>
   <aside>...</aside>
